# aois

lab1/: .gitignore  functions.cpp  header.h  main  main.cpp  menu.cpp  run_tests  tests.cpp
lab2/: .stats  CMakeLists.txt  Makefile  coverage.sh  go
lab2/include/: exceptions.h  forms.h  menu.h  opz.h  table.h
lab2/src/: forms.cpp  main  main.cpp  menu.cpp  opz.cpp  table.cpp
lab2/tests/: test_logic.cpp
lab4/: CMakeLists.txt  HashTable.cpp  HashTable.h  coverage_tests  coverage_tests-tests.gcno  main  main.cpp  tests.cpp
